syntax = "proto3";

package auth_v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

option go_package = "github.com/solumD/auth/pkg/auth_v1;auth_v1";

service AuthV1 {
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
    rpc GetUser(GetUserRequest) returns (GetUserResponse);
    rpc UpdateUser(UpdateUserRequest) returns (google.protobuf.Empty);
    rpc DeleteUser(DeleteUserRequest) returns (google.protobuf.Empty);
}

enum Role {
    UNKNOWN = 0;
    USER = 1;
    ADMIN = 2;
}

message UserInfo {
    string name = 1;
    string email = 2;
    Role role = 3;
}

message User {
    int64 id = 1;
    UserInfo info = 2;
    google.protobuf.Timestamp created_at = 3;
    google.protobuf.Timestamp updated_at = 4;
}

message CreateUserInfo {
    UserInfo info = 1;
    string password = 2;
    string password_confirm = 3; 
}

message UpdateUserInfo {
    google.protobuf.StringValue name = 1;
    google.protobuf.StringValue email = 2;
    Role role = 3;
}

message CreateUserRequest {
    CreateUserInfo info = 1;
}

message CreateUserResponse {
    int64 id = 1;
}

message GetUserRequest {
    int64 id = 1;
}

message GetUserResponse {
    User user = 1;
}

message UpdateUserRequest {
    int64 id = 1;
    UpdateUserInfo info = 2;
}

message DeleteUserRequest {
    int64 id = 1;
}